https://headsupvideo.atlassian.net/browse/HEADSUP-23  I think this fixes the horizontal scroll problem

--- a/src/app/video/view-video/view-video.component.css
+++ b/src/app/video/view-video/view-video.component.css
@@ -11,7 +11,8 @@
     position: fixed; 
     top:100%;
     border:1px solid #cdcdcd;
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden
   }
   
 .target {
